vpoappdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels: 
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: ndzenyuy/vprofileapp:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: vproapp-port
          containerPort: 8080
