vprodbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels: 
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: vprofile/vprofiledb
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: vpro-db-data
        ports:
          - name: vprodd-port
            containerPort: 3306
      nodeSelector: 
        zone: us-east-2a
      volumes:
        - name: vpro-db-data
          awsElasticBlockStore: 
            volumeID: vol-0cb3dd6653eae08ec
            fsType: ext4
